--- a/Pythontutorial.ipynb
+++ b/Pythontutorial.ipynb
@@ -35,10 +35,22 @@
         "print(\"hello\");"
       ],
       "metadata": {
-        "id": "uDNuXbSUeBGb"
+        "id": "uDNuXbSUeBGb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "48e37e51-cc94-4791-e281-5211862306d8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ]
     }
   ]
 }
