--- a/Pythontutorial.ipynb
+++ b/Pythontutorial.ipynb
@@ -6,7 +6,7 @@
       "name": "Pythontutorial.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpvzGMhc3Zl5rp5eG6rCRn",
+      "authorship_tag": "ABX9TyO7Djg+CIp+E+APje2sWwYy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,13 +373,104 @@
     {
       "cell_type": "code",
       "source": [
-        "t=[1,'2',3]"
+        "t=(1,3,3)\n",
+        "type(t)\n"
       ],
       "metadata": {
-        "id": "RtYfeHTQnqm_"
+        "id": "RtYfeHTQnqm_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1fb149b-4449-4887-8861-691dbcea0002"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Boolean/LOOPS/conditionals\n"
+      ],
+      "metadata": {
+        "id": "CIp1TuLRDxhI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=True\n",
+        "print(a)\n",
+        "#rlational operators\n",
+        "x=10\n",
+        "y=20\n",
+        "print(x>y)\n",
+        "print(x==y)\n",
+        "print(x<y)\n",
+        "print(x!=y)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nS3gJyBVD5iY",
+        "outputId": "c75dc303-4949-43e7-e0af-a95e4d43ff5e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if else conditional value\n",
+        "#indentation mandatory\n",
+        "if x>y:\n",
+        "  print(x)\n",
+        "else:\n",
+        "  print(y)\n",
+        "  print(\"vsy\")\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2VThqKGuEh00",
+        "outputId": "bae2fe0d-7f29-49a3-8627-584b551f4e59"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "vsy\n"
+          ]
+        }
+      ]
     }
   ]
 }
