--- a/Pythontutorial.ipynb
+++ b/Pythontutorial.ipynb
@@ -6,7 +6,7 @@
       "name": "Pythontutorial.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7Djg+CIp+E+APje2sWwYy",
+      "authorship_tag": "ABX9TyPBlod8j4ylX4YACPS6R3B9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -426,7 +426,7 @@
         "id": "nS3gJyBVD5iY",
         "outputId": "c75dc303-4949-43e7-e0af-a95e4d43ff5e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,11 +446,13 @@
       "source": [
         "#if else conditional value\n",
         "#indentation mandatory\n",
+        "x=10\n",
+        "y=20\n",
         "if x>y:\n",
         "  print(x)\n",
         "else:\n",
         "  print(y)\n",
-        "  print(\"vsy\")\n",
+        "\n",
         " "
       ],
       "metadata": {
@@ -458,16 +460,339 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2VThqKGuEh00",
-        "outputId": "bae2fe0d-7f29-49a3-8627-584b551f4e59"
+        "outputId": "9917c207-edcc-400a-b78b-374fe3a582c4"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "20\n",
-            "vsy\n"
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#loops\n",
+        "i=0\n",
+        "while i<10:\n",
+        "  print(i)\n",
+        "  i=i+1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HGhk9i2NIIpe",
+        "outputId": "9c9a774d-9de0-450d-cf47-d751b6402500"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "range(1,10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yd3nmMzrJhPN",
+        "outputId": "7831dc94-562b-4356-d60a-51ce94be2a77"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(1, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#loop using  python:\n",
+        "for i in range(1,10):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rYcwfvJDJsKx",
+        "outputId": "dd52a953-5fc2-4aa7-dbc0-77eeb782770c"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(0,8,4):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2NzDCX3fKKTg",
+        "outputId": "d4f5dcdd-4bfa-4d7d-f60e-a7ed3ae49e95"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#print prime number;\n",
+        "n=int(input())\n",
+        "prime = True\n",
+        "for i in range(2,n-1):\n",
+        "  if(n%i==0):\n",
+        "    prime=False\n",
+        "    break\n",
+        "if prime:\n",
+        "  print(\"prime\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"non prime\")\n",
+        "\n",
+        "\n",
+        " \n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "epRBwl0lKdl2",
+        "outputId": "4ea3ae0a-8027-406e-e3e2-a030ad652666"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "non prime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fast iteration\n",
+        "n='abcderd'\n",
+        "for c in n:\n",
+        "  print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-gowDjlDMIOU",
+        "outputId": "13dce2dd-2745-4780-cf15-ff6c914eda6c"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "d\n",
+            "e\n",
+            "r\n",
+            "d\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fast iteration in tuples\n",
+        "animal=(\"cat\",\"dog\",1,True)\n",
+        "for i in animal:\n",
+        "  print(i)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tH2vxvh8MgV5",
+        "outputId": "4b92be5a-130f-4c6d-d1d7-0826f16b533a"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n",
+            "dog\n",
+            "1\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#function \n",
+        "def sum(a,b):\n",
+        "  z=a+b\n",
+        "  return z\n",
+        "\n",
+        "x=10\n",
+        "y=20\n",
+        "print(sum(x,y))  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S9Ay1uMYNey6",
+        "outputId": "0d51bfb9-ce40-49eb-e0b1-a362bbf9aa1e"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Defining function in python using def and point to note that the indentation is important:"
+      ],
+      "metadata": {
+        "id": "w2feVH3vNuW3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#default argument to function \n",
+        "def power(x,y=2):\n",
+        "  return x**y\n",
+        "\n",
+        "n=10\n",
+        "e=4\n",
+        "print(power(n,e))#providing both argument\n",
+        "#provide default argument\n",
+        "print(power(12))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QI4pkZ7JN3l2",
+        "outputId": "3c5c5923-d2e0-4773-ef68-d34e508e2b8d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000\n",
+            "144\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum(a,b=1,c=2):\n",
+        "  return a+b+c\n",
+        "\n",
+        "a=1\n",
+        "print(sum(a))#2 default arg\n",
+        "print(sum(a,3))#1 default arg\n",
+        "print(sum)\n",
+        "print(sum(a,4,5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KlRwXzZROzl5",
+        "outputId": "3061041b-db92-4610-df1c-f7818863d35d"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "6\n",
+            "<function sum at 0x7f8258267e60>\n",
+            "10\n"
           ]
         }
       ]
